--- a/Layouts/Result.xml
+++ b/Layouts/Result.xml
@@ -107,6 +107,33 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="txtSoundCred" uid="235">
+                    <properties>
+                        <text>All of our songs...                                  Kevin MacLeod (incompetech.com)               Licensed under Creative Commons: By Attribution 3.0 http://creativecommons.org/licenses/by/3.0/</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Consolas,-19,400,0</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>708</x>
+                        <y>522</y>
+                        <z>0</z>
+                        <width>573</width>
+                        <height>139</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
